// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`{ { i8, i32 }, ptr } 1`] = `
Object {
  "result": Object {
    "length": 9,
    "node": Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": 8,
              "type": Object {
                "enum": Object {
                  "0": "FILE",
                  "1": "DECLARE",
                  "10": "IDENTIFIER",
                  "11": "NUMBER",
                  "12": "VOID_TYPE",
                  "13": "BLOCK",
                  "14": "RETURN_INSTRUCTION",
                  "15": "CALL_ASSIGNABLE",
                  "16": "ASSIGNMENT_INSTRUCTION",
                  "17": "INPUT",
                  "18": "INPUT_FLAG",
                  "2": "FUNCTION",
                  "3": "INTEGER_TYPE",
                  "4": "GLOBAL_VARIABLE",
                  "5": "STRING",
                  "6": "FLOAT_TYPE",
                  "7": "POINTER_TYPE",
                  "8": "ARRAY_TYPE",
                  "9": "STRUCT_TYPE",
                  "ARRAY_TYPE": 8,
                  "ASSIGNMENT_INSTRUCTION": 16,
                  "BLOCK": 13,
                  "CALL_ASSIGNABLE": 15,
                  "DECLARE": 1,
                  "FILE": 0,
                  "FLOAT_TYPE": 6,
                  "FUNCTION": 2,
                  "GLOBAL_VARIABLE": 4,
                  "IDENTIFIER": 10,
                  "INPUT": 17,
                  "INPUT_FLAG": 18,
                  "INTEGER_TYPE": 3,
                  "NUMBER": 11,
                  "POINTER_TYPE": 7,
                  "RETURN_INSTRUCTION": 14,
                  "STRING": 5,
                  "STRUCT_TYPE": 9,
                  "VOID_TYPE": 12,
                },
                "id": 3,
              },
            },
            Object {
              "data": 32,
              "type": Object {
                "enum": Object {
                  "0": "FILE",
                  "1": "DECLARE",
                  "10": "IDENTIFIER",
                  "11": "NUMBER",
                  "12": "VOID_TYPE",
                  "13": "BLOCK",
                  "14": "RETURN_INSTRUCTION",
                  "15": "CALL_ASSIGNABLE",
                  "16": "ASSIGNMENT_INSTRUCTION",
                  "17": "INPUT",
                  "18": "INPUT_FLAG",
                  "2": "FUNCTION",
                  "3": "INTEGER_TYPE",
                  "4": "GLOBAL_VARIABLE",
                  "5": "STRING",
                  "6": "FLOAT_TYPE",
                  "7": "POINTER_TYPE",
                  "8": "ARRAY_TYPE",
                  "9": "STRUCT_TYPE",
                  "ARRAY_TYPE": 8,
                  "ASSIGNMENT_INSTRUCTION": 16,
                  "BLOCK": 13,
                  "CALL_ASSIGNABLE": 15,
                  "DECLARE": 1,
                  "FILE": 0,
                  "FLOAT_TYPE": 6,
                  "FUNCTION": 2,
                  "GLOBAL_VARIABLE": 4,
                  "IDENTIFIER": 10,
                  "INPUT": 17,
                  "INPUT_FLAG": 18,
                  "INTEGER_TYPE": 3,
                  "NUMBER": 11,
                  "POINTER_TYPE": 7,
                  "RETURN_INSTRUCTION": 14,
                  "STRING": 5,
                  "STRUCT_TYPE": 9,
                  "VOID_TYPE": 12,
                },
                "id": 3,
              },
            },
          ],
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 9,
          },
        },
        Object {
          "data": undefined,
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 7,
          },
        },
      ],
      "type": Object {
        "enum": Object {
          "0": "FILE",
          "1": "DECLARE",
          "10": "IDENTIFIER",
          "11": "NUMBER",
          "12": "VOID_TYPE",
          "13": "BLOCK",
          "14": "RETURN_INSTRUCTION",
          "15": "CALL_ASSIGNABLE",
          "16": "ASSIGNMENT_INSTRUCTION",
          "17": "INPUT",
          "18": "INPUT_FLAG",
          "2": "FUNCTION",
          "3": "INTEGER_TYPE",
          "4": "GLOBAL_VARIABLE",
          "5": "STRING",
          "6": "FLOAT_TYPE",
          "7": "POINTER_TYPE",
          "8": "ARRAY_TYPE",
          "9": "STRUCT_TYPE",
          "ARRAY_TYPE": 8,
          "ASSIGNMENT_INSTRUCTION": 16,
          "BLOCK": 13,
          "CALL_ASSIGNABLE": 15,
          "DECLARE": 1,
          "FILE": 0,
          "FLOAT_TYPE": 6,
          "FUNCTION": 2,
          "GLOBAL_VARIABLE": 4,
          "IDENTIFIER": 10,
          "INPUT": 17,
          "INPUT_FLAG": 18,
          "INTEGER_TYPE": 3,
          "NUMBER": 11,
          "POINTER_TYPE": 7,
          "RETURN_INSTRUCTION": 14,
          "STRING": 5,
          "STRUCT_TYPE": 9,
          "VOID_TYPE": 12,
        },
        "id": 9,
      },
    },
  },
  "success": true,
}
`;

exports[`{ i1, i2, i3 } 1`] = `
Object {
  "result": Object {
    "length": 7,
    "node": Object {
      "data": Array [
        Object {
          "data": 1,
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 3,
          },
        },
        Object {
          "data": 2,
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 3,
          },
        },
        Object {
          "data": 3,
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 3,
          },
        },
      ],
      "type": Object {
        "enum": Object {
          "0": "FILE",
          "1": "DECLARE",
          "10": "IDENTIFIER",
          "11": "NUMBER",
          "12": "VOID_TYPE",
          "13": "BLOCK",
          "14": "RETURN_INSTRUCTION",
          "15": "CALL_ASSIGNABLE",
          "16": "ASSIGNMENT_INSTRUCTION",
          "17": "INPUT",
          "18": "INPUT_FLAG",
          "2": "FUNCTION",
          "3": "INTEGER_TYPE",
          "4": "GLOBAL_VARIABLE",
          "5": "STRING",
          "6": "FLOAT_TYPE",
          "7": "POINTER_TYPE",
          "8": "ARRAY_TYPE",
          "9": "STRUCT_TYPE",
          "ARRAY_TYPE": 8,
          "ASSIGNMENT_INSTRUCTION": 16,
          "BLOCK": 13,
          "CALL_ASSIGNABLE": 15,
          "DECLARE": 1,
          "FILE": 0,
          "FLOAT_TYPE": 6,
          "FUNCTION": 2,
          "GLOBAL_VARIABLE": 4,
          "IDENTIFIER": 10,
          "INPUT": 17,
          "INPUT_FLAG": 18,
          "INTEGER_TYPE": 3,
          "NUMBER": 11,
          "POINTER_TYPE": 7,
          "RETURN_INSTRUCTION": 14,
          "STRING": 5,
          "STRUCT_TYPE": 9,
          "VOID_TYPE": 12,
        },
        "id": 9,
      },
    },
  },
  "success": true,
}
`;

exports[`{ ptr } 1`] = `
Object {
  "result": Object {
    "length": 3,
    "node": Object {
      "data": Array [
        Object {
          "data": undefined,
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 7,
          },
        },
      ],
      "type": Object {
        "enum": Object {
          "0": "FILE",
          "1": "DECLARE",
          "10": "IDENTIFIER",
          "11": "NUMBER",
          "12": "VOID_TYPE",
          "13": "BLOCK",
          "14": "RETURN_INSTRUCTION",
          "15": "CALL_ASSIGNABLE",
          "16": "ASSIGNMENT_INSTRUCTION",
          "17": "INPUT",
          "18": "INPUT_FLAG",
          "2": "FUNCTION",
          "3": "INTEGER_TYPE",
          "4": "GLOBAL_VARIABLE",
          "5": "STRING",
          "6": "FLOAT_TYPE",
          "7": "POINTER_TYPE",
          "8": "ARRAY_TYPE",
          "9": "STRUCT_TYPE",
          "ARRAY_TYPE": 8,
          "ASSIGNMENT_INSTRUCTION": 16,
          "BLOCK": 13,
          "CALL_ASSIGNABLE": 15,
          "DECLARE": 1,
          "FILE": 0,
          "FLOAT_TYPE": 6,
          "FUNCTION": 2,
          "GLOBAL_VARIABLE": 4,
          "IDENTIFIER": 10,
          "INPUT": 17,
          "INPUT_FLAG": 18,
          "INTEGER_TYPE": 3,
          "NUMBER": 11,
          "POINTER_TYPE": 7,
          "RETURN_INSTRUCTION": 14,
          "STRING": 5,
          "STRUCT_TYPE": 9,
          "VOID_TYPE": 12,
        },
        "id": 9,
      },
    },
  },
  "success": true,
}
`;
